# azcam-webpages

./: README.md  pyproject.toml
azcam_webpages/: __init__.py
azcam_webpages/exposure/: exposure_web.py
azcam_webpages/queue/: queue_card.py  queue_web.py
azcam_webpages/status/: status_web.py
